--- a/AdventOfCode/appsettings.json
+++ b/AdventOfCode/appsettings.json
@@ -1,5 +1,3 @@
 {
-  "AppSettings": {
-    "adventOfCodeURL": "https://adventofcode.com/2024/day/","
-  }
+  "AdventOfCodeURL": "https://adventofcode.com/2024/day/"
 }
